--- a/index.html
+++ b/index.html
@@ -1,33 +1,36 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>AZExpandableIconListView by Azuritul</title>
+    <meta name="description" content="AZExpandableIconListView : An expandable/collapsible UIView that holds an array of UIImageView written in Swift.">
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
-    <meta name="viewport" content="width=device-width">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>AZExpandableIconListView</title>
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
-        <h1>AZExpandableIconListView</h1>
-        <p>An expandable/collapsible UIView that holds an array of UIImageView written in Swift.</p>
 
-        <p class="view"><a href="https://github.com/Azuritul/AZExpandableIconListView">View the Project on GitHub <small>Azuritul/AZExpandableIconListView</small></a></p>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/Azuritul/AZExpandableIconListView">View on GitHub</a>
 
+          <h1 id="project_title">AZExpandableIconListView</h1>
+          <h2 id="project_tagline">An expandable/collapsible UIView that holds an array of UIImageView written in Swift.</h2>
 
-        <ul>
-          <li><a href="https://github.com/Azuritul/AZExpandableIconListView/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/Azuritul/AZExpandableIconListView/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/Azuritul/AZExpandableIconListView">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/Azuritul/AZExpandableIconListView/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/Azuritul/AZExpandableIconListView/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <p><a href="https://travis-ci.org/Azuritul/AZExpandableIconListView"><img src="http://img.shields.io/travis/Azuritul/AZExpandableIconListView.svg?style=flat" alt="CI Status"></a>
 <a href="http://cocoapods.org/pods/AZExpandableIconListView"><img src="https://img.shields.io/cocoapods/v/AZExpandableIconListView.svg?style=flat" alt="Version"></a>
 <a href="http://cocoapods.org/pods/AZExpandableIconListView"><img src="https://img.shields.io/cocoapods/l/AZExpandableIconListView.svg?style=flat" alt="License"></a>
@@ -110,12 +113,17 @@ pod <span class="pl-s"><span class="pl-pds">'</span>AZExpandableIconListView<spa
 
 <p>AZExpandableIconListView is available under the MIT license. See the LICENSE file for more info.</p>
       </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/Azuritul">Azuritul</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">AZExpandableIconListView maintained by <a href="https://github.com/Azuritul">Azuritul</a></p>
+        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+
     
+
   </body>
 </html>
